erDiagram
    raw_prices {
        int id PK
        varchar ticker
        timestamptz timestamp
        numeric open
        numeric high
        numeric low
        numeric close
        bigint volume
        timestamptz created_at
    }

    technical_indicators {
        int id PK
        varchar ticker
        timestamptz timestamp
        numeric rsi_14
        numeric macd
        numeric macd_signal
        numeric bollinger_upper
        numeric bollinger_lower
        numeric sma_50
        numeric sma_200
        timestamptz created_at
    }

    predictions {
        int id PK
        varchar ticker
        timestamptz timestamp
        varchar predicted_direction
        numeric confidence
        varchar model_version
        varchar actual_direction "nullable"
        timestamptz created_at
    }

    model_registry {
        int id PK
        varchar model_name
        varchar version
        numeric accuracy
        numeric precision_score
        numeric recall
        numeric f1
        timestamptz trained_at
        boolean is_active
        varchar model_path
    }

    raw_prices ||--o{ technical_indicators : "ticker + timestamp"
    raw_prices ||--o{ predictions : "ticker + timestamp"
    model_registry ||--o{ predictions : "model_version"
